added corpus, now returning frequent token json, what next?

--- a/New_Language.ipynb
+++ b/New_Language.ipynb
@@ -65,10 +65,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "base_config.cfg  lex_attrs.py\t setup.py\t      tokenizer_exceptions.py\r\n",
-      "examples.py\t meow.egg-info\t stop_words.py\r\n",
-      "__init__.py\t punctuation.py  syntax_iterators.py\r\n",
-      "lemmatizer.py\t __pycache__\t tag_map.py\r\n"
+      "base_config.cfg  lex_attrs.py\tpunctuation.py\tsyntax_iterators.py\r\n",
+      "examples.py\t lookups\t__pycache__\ttag_map.py\r\n",
+      "__init__.py\t Meow\t\tsetup.py\ttexts\r\n",
+      "lemmatizer.py\t meow.egg-info\tstop_words.py\ttokenizer_exceptions.py\r\n"
      ]
     }
    ],
@@ -85,19 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><span style='border: 5px solid blue; margin:5px;'>this</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>is</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>sentence</span>&nbsp;</div><div><span style='border: 5px solid blue; margin:5px;'>this</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>is</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>more</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>sentence</span>&nbsp;</div><div><span style='border: 5px solid blue; margin:5px;'>with</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>much</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>more</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>word</span>&nbsp;</div>"
+       "<div><span style='border: 5px solid blue; margin:5px;'>This</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>was</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>sentence</span>&nbsp;</div><div><span style='border: 5px solid blue; margin:5px;'>Then</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>more</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>sentence</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>.</span>&nbsp;</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -118,6 +118,43 @@
     "- To split a token in two, `{'Kummerspeck':[{ORTH:\"Kummer\"},{ORTH:\"speck\"}]}`\n",
     "\n",
     "Note in both cases that we add a dictionary. The key is the string to match on, with a list of tokens.  In the first case we had a single token where we would otherwise have two and vice versa."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lookups \n",
+    "\n",
+    "The `create_object()` function creates a `new_lang/lookups` directory that contains three files.  These are simple json lookups for unambiguous pos, lemma and entities. You can add your data to these files and automatically update token values.  Keep in mind that you'll need to find a balance between the convenience of automatically annotating tokens and the inconvenience of having to correct machine errors.  Once you're done updating the files with your existing linguistic data, proceed to the next step. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Texts\n",
+    "\n",
+    "For us to identify frequent tokens for automatic annotation, you'll need to provide texts.  Place your machine-readable utf-8 text files in the `new_lang/texts` folder.   "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'texts': 4, 'tokens': 409276, 'unique_tokens': 43313}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from util.corpus import make_corpus\n",
+    "\n",
+    "make_corpus(lang_name)"
    ]
   },
   {
