--- a/New_Language.ipynb
+++ b/New_Language.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'3.0.5'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -32,16 +32,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "('meow', 'meow')"
+       "'🍈 created language object for meow'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -58,17 +58,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "base_config.cfg  lex_attrs.py\tpunctuation.py\tsyntax_iterators.py\r\n",
-      "examples.py\t lookups\t__pycache__\ttag_map.py\r\n",
-      "__init__.py\t Meow\t\tsetup.py\ttexts\r\n",
-      "lemmatizer.py\t meow.egg-info\tstop_words.py\ttokenizer_exceptions.py\r\n"
+      "base_config.cfg  lemmatizer.py\tpunctuation.py\tsyntax_iterators.py\r\n",
+      "corpus_json\t lex_attrs.py\t__pycache__\ttag_map.py\r\n",
+      "examples.py\t lookups\tsetup.py\ttexts\r\n",
+      "__init__.py\t meow.egg-info\tstop_words.py\ttokenizer_exceptions.py\r\n"
      ]
     }
    ],
@@ -85,19 +85,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<div><span style='border: 5px solid blue; margin:5px;'>This</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>was</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>sentence</span>&nbsp;</div><div><span style='border: 5px solid blue; margin:5px;'>Then</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>more</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>sentence</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>.</span>&nbsp;</div>"
+       "<div><span style='border: 5px solid blue; margin:5px;'>The</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>are</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>was</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>sentence</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>here</span>&nbsp;<span style='border: 5px solid blue; margin:5px;'>.</span>&nbsp;</div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +117,7 @@
     "- To join two tokens, add an exception `{'BIG YIKES':[{ORTH: 'BIG YIKES'}]}`\n",
     "- To split a token in two, `{'Kummerspeck':[{ORTH:\"Kummer\"},{ORTH:\"speck\"}]}`\n",
     "\n",
-    "Note in both cases that we add a dictionary. The key is the string to match on, with a list of tokens.  In the first case we had a single token where we would otherwise have two and vice versa."
+    "Note in both cases that we add a dictionary. The key is the string to match on, with a list of tokens.  In the first case we had a single token where we would otherwise have two and vice versa. You can find more details in the spaCy documentation and [here](https://new-languages-for-nlp.github.io/course-materials/w1/tokenization.html)."
    ]
   },
   {
@@ -140,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'texts': 4, 'tokens': 409276, 'unique_tokens': 43313}\n"
+      "{'texts': 5, 'tokens': 570558, 'unique_tokens': 57166}\n"
      ]
     }
    ],
@@ -155,6 +155,100 @@
     "from util.corpus import make_corpus\n",
     "\n",
     "make_corpus(lang_name)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The output of make_corpus is a json file at [`new_lang/corpus_json/tokens.json`](./new_lang/corpus_json/tokens.json). For each token, you'll find a `text` key for the token's string as well as keys for pos_, lemma_ and ent_type_. Keep in mind that this system is not able to process ambiguous lookups.  Only enter data for tokens or spans with very little semantic variation.      "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "🍉 To bulk annotate 33% of the corpus, add data to first 30 tokens\n",
+      "🍅 To bulk annotate 50% of the corpus, add data to first 130 tokens\n",
+      "🍒 To bulk annotate 66% of the corpus, add data to first 690 tokens\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import srsly\n",
+    "from pathlib import Path \n",
+    "\n",
+    "def get_percentages():\n",
+    "    thirds = []\n",
+    "    halfs = []\n",
+    "    two_thirds = [] \n",
+    "    tokens = srsly.read_json(Path.cwd() / 'new_lang' / 'corpus_json' / 'tokens.json')\n",
+    "    tokens = srsly.json_loads(tokens)\n",
+    "    for token in tokens:\n",
+    "        if token['rank'] == 1:\n",
+    "            total_tokens = token['count'] + token['remain']\n",
+    "        \n",
+    "        percent_annotated = 1 - (token['remain'] / total_tokens)\n",
+    "        percent_annotated = int(round((percent_annotated * 100), 0))\n",
+    "        if percent_annotated == 33:\n",
+    "            thirds.append(token)\n",
+    "        if percent_annotated == 50:\n",
+    "            halfs.append(token)\n",
+    "        if percent_annotated == 66:\n",
+    "            two_thirds.append(token)\n",
+    "    return thirds[0], halfs[0], two_thirds[0]\n",
+    "        \n",
+    "    #let percent_annotated = 1 - (token.remain / total_tokens);\n",
+    "#    let percent_annotated_str = (percent_annotated*100).toFixed(0);\n",
+    "third, half, two_thirds = get_percentages()\n",
+    "print(f\"\"\"\n",
+    "🍉 To bulk annotate 33% of the corpus, add data to first {third['rank']} tokens\n",
+    "🍅 To bulk annotate 50% of the corpus, add data to first {half['rank']} tokens\n",
+    "🍒 To bulk annotate 66% of the corpus, add data to first {two_thirds['rank']} tokens\n",
+    "\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next we will export your texts and lookups in a TSV file in the CoreNLP format.  This data can then be loaded into INCEpTION for annotation work "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'saved data to file /tmp/conll_export.zip'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from util.export import download\n",
+    "\n",
+    "download(lang_name)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you have completed all annotation work in INCEpTION, you're ready to begin model training. This final step will export your spaCy language object. From there you can follow the spaCy documentation on model training!  \n"
    ]
   },
   {
