export to train working

--- a/New_Language.ipynb
+++ b/New_Language.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,7 @@
        "'3.0.5'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -53,7 +53,7 @@
        "'🍈 created language object for meow'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,17 +70,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "base_config.cfg  lemmatizer.py\tpunctuation.py\tsyntax_iterators.py\r\n",
-      "corpus_json\t lex_attrs.py\t__pycache__\ttag_map.py\r\n",
-      "examples.py\t lookups\tsetup.py\ttexts\r\n",
-      "__init__.py\t meow.egg-info\tstop_words.py\ttokenizer_exceptions.py\r\n"
+      "base_config.cfg  lex_attrs.py\t __pycache__\t      texts\r\n",
+      "corpus_json\t lookups\t setup.py\t      tokenizer_exceptions.py\r\n",
+      "examples.py\t meow.egg-info\t stop_words.py\r\n",
+      "__init__.py\t project.yml\t syntax_iterators.py\r\n",
+      "lemmatizer.py\t punctuation.py  tag_map.py\r\n"
      ]
     }
    ],
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +108,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +244,7 @@
        "'saved data to file /tmp/conllu_export.zip'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,29 +267,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from spacy.language import Language\n",
-    "nlp = Language().from_disk('/tmp/Meow')\n"
+    "# Create a spaCy project file for your project.  \n",
+    "from util.project import make_project\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "created file /home/ajanco/projects/cadet-the-notebook/Meow.zip\n"
+     ]
+    }
+   ],
    "source": [
-    "from new_lang import Meow"
+    "import shutil\n",
+    "from util.project import make_project\n",
+    "\n",
+    "new_lang = Path.cwd() / \"new_lang\"\n",
+    "make_project(lang_name,lang_code)\n",
+    "\n",
+    "#make export directory \n",
+    "export_path = Path.cwd() / lang_name\n",
+    "\n",
+    "\n",
+    "#shutil.make_archive(\"zipped_sample_directory\", \"zip\", \"sample_directory\")\n",
+    "shutil.make_archive(str(export_path), 'zip', str(new_lang))\n",
+    "zip_file = Path.cwd() / (lang_name + '.zip')\n",
+    "print(f'created file {zip_file}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
